added bgm library list up to 40

--- a/m22.html
+++ b/m22.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - Cartoon, Coleman Trapp, Jéja - Why We Lose (feat. Coleman Trapp)</title>
     <link rel="stylesheet" href="m22.css" />
   </head>
   <body>
