--- a/m23.html
+++ b/m23.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - Electro-Light, Jordan Kelvin James, Anna Yvette - Wait For You (feat. Anna Yvette) </title>
     <link rel="stylesheet" href="m23.css" />
   </head>
   <body>
