--- a/m26.html
+++ b/m26.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - Janji, Johnning - Heroes Tonight (feat. Johnning)</title>
     <link rel="stylesheet" href="m26.css" />
   </head>
   <body>
