--- a/m24.html
+++ b/m24.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - Jim Yosef, Anna Yvette - Linked</title>
     <link rel="stylesheet" href="m24.css" />
   </head>
   <body>
