--- a/m25.html
+++ b/m25.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - OMFG - Meant for You</title>
     <link rel="stylesheet" href="m25.css" />
   </head>
   <body>
