--- a/m27.html
+++ b/m27.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - Syn Cole - Got the Feeling (feat. kirstin)</title>
     <link rel="stylesheet" href="m27.css" />
   </head>
   <body>
