--- a/m28.html
+++ b/m28.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
+    <title>Playmint Music - Sub Urban - Cradles</title>
     <link rel="stylesheet" href="m28.css" />
   </head>
   <body>
