added 10 bgm pages library

--- a/bgm06.html
+++ b/bgm06.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
-    <title>Playmint Music - Rival, Alan Walker - Dreamer (Rival Remix)</title>
+    <title>Playmint Music - NIVIRO - The Riot</title>
     <link rel="stylesheet" href="bgm06.css" />
   </head>
   <body>
@@ -23,21 +23,21 @@
               <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
 
-        <div class="text-wrapper-10">Dreamer (Rival Remix)</div>
+        <div class="text-wrapper-10">The Riot</div>
 
         </div>
         <div class="overlap">
           <div class="list">
             <div class="rectangle"> <!-- Player -->
-              <audio id="audiop" src="resources/files/musiclib/m01.mp3" controls="controls"></audio>
+              <audio id="audiop" src="resources/files/bgmlib/b06.mp3" controls="controls"></audio>
             </div> 
             <div class="rectangle-2"></div> <!-- Album -->
           </div>
           
-          <div class="text-wrapper-7">Rival, Alan Walker</div> <!-- Artist Title -->
+          <div class="text-wrapper-7">NIVIRO</div> <!-- Artist Title -->
         </div>
         <div class="overlap-group"> <!-- Download info -->
-          <a href="resources/files/musiclib/m01.mp3" download> <!-- Download Button -->
+          <a href="resources/files/bgmlib/b06.mp3" download> <!-- Download Button -->
             <div class="div-wrapper"><div class="text-wrapper-8">Download</div></div>
           </a> 
           <div class="text-wrapper-9">
