added bgm lists

--- a/bgmlib_main.html
+++ b/bgmlib_main.html
@@ -35,8 +35,8 @@
         <div class="listboarder">
           <div class="album_style1"></div>
           <a href="bgm01.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Dreamer (Rival Remix)</div>
-          <div class="artisttitle_style">Rival, Alan Walker</div>
+          <div class="songtitle_style">Echo</div>
+          <div class="artisttitle_style">Apollo On The Run</div>
         </div>
       </div>
 
@@ -44,8 +44,8 @@
         <div class="listboarder">
           <div class="album_style2"></div>
           <a href="bgm02.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Stars in the Sky</div>
-          <div class="artisttitle_style">BEKSY.</div>
+          <div class="songtitle_style">Win & Lose</div>
+          <div class="artisttitle_style">Chime</div>
         </div>
       </div>
 
@@ -53,8 +53,8 @@
         <div class="listboarder">
           <div class="album_style3"></div>
           <a href="bgm03.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Cybernetic</div>
-          <div class="artisttitle_style">Rameses B</div>
+          <div class="songtitle_style">Hinterlands</div>
+          <div class="artisttitle_style">Everen Maxwell</div>
         </div>
       </div>
 
@@ -62,8 +62,8 @@
         <div class="listboarder">
           <div class="album_style4"></div>
           <a href="bgm04.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Kapoeira Phonk</div>
-          <div class="artisttitle_style">DYNAMIS, HXDES</div>
+          <div class="songtitle_style">Cyberblade</div>
+          <div class="artisttitle_style">Extra Terra, Max Brhon</div>
         </div>
       </div>
 
@@ -71,8 +71,8 @@
         <div class="listboarder">
           <div class="album_style5"></div>
           <a href="bgm05.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Vibe</div>
-          <div class="artisttitle_style">Spicyverse</div>
+          <div class="songtitle_style">Obsession</div>
+          <div class="artisttitle_style">More Plastic</div>
         </div>
       </div>
 
@@ -80,8 +80,8 @@
         <div class="listboarder">
           <div class="album_style6"></div>
           <a href="bgm06.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Soundclash</div>
-          <div class="artisttitle_style">Jonth</div>
+          <div class="songtitle_style">The Riot</div>
+          <div class="artisttitle_style">NIVIRO</div>
         </div>
       </div>
 
@@ -89,8 +89,8 @@
         <div class="listboarder">
           <div class="album_style7"></div>
           <a href="bgm07.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Pushing On</div>
-          <div class="artisttitle_style">RIOT</div>
+          <div class="songtitle_style">Dreamer (Rival Remix)</div>
+          <div class="artisttitle_style">Rival, Alan Walker</div>
         </div>
       </div>
 
@@ -98,8 +98,8 @@
         <div class="listboarder">
           <div class="album_style8"></div>
           <a href="bgm08.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Comet</div>
-          <div class="artisttitle_style">Keepsake, Skybreak</div>
+          <div class="songtitle_style">Call My Name</div>
+          <div class="artisttitle_style">Robbie Hutton, Janji</div>
         </div>
       </div>
 
@@ -107,8 +107,8 @@
         <div class="listboarder">
           <div class="album_style9"></div>
           <a href="bgm09.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">DELTA</div>
-          <div class="artisttitle_style">DJ FKU</div>
+          <div class="songtitle_style">Your Poison</div>
+          <div class="artisttitle_style">ROY KNOX</div>
         </div>
       </div>
       
@@ -116,8 +116,8 @@
         <div class="listboarder">
           <div class="album_style10"></div>
           <a href="bgm10.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Nostalgia</div>
-          <div class="artisttitle_style">Johnning, Janji</div>
+          <div class="songtitle_style">On and On</div>
+          <div class="artisttitle_style">Sayfro, BAYZY</div>
         </div>
       </div>
 
@@ -125,8 +125,8 @@
         <div class="listboarder">
           <div class="album_style11"></div>
           <a href="bgm11.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">BANDIDO FUNK</div>
-          <div class="artisttitle_style">Kamran747, Emin Nilsen</div>
+          <div class="songtitle_style">TITLE</div>
+          <div class="artisttitle_style">ARTIST</div>
         </div>
       </div>
 
