--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="list">
           <div class="listboarder">
             <div class="album_style_m1"></div>
-            <a href="m01.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-            <div class="songtitle_style">Dreamer (Rival Remix)</div>
-            <div class="artisttitle_style">Rival, Alan Walker</div>
+            <a href="m27.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Got the Feeling (feat. kirstin)</div>
+            <div class="artisttitle_style">Syn Cole</div>
           </div>
         </div>
 
@@ -100,9 +100,9 @@
         <div class="list-4">
           <div class="listboarder">
             <div class="album_style_bgm1"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <a href="bgm01.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Echo</div>
+            <div class="artisttitle_style">Apollo On The Run</div>
           </div>
         </div>
 
@@ -110,9 +110,9 @@
         <div class="list-5">
           <div class="listboarder">
             <div class="album_style_bgm2"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <a href="bgm02.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Win & Lose</div>
+            <div class="artisttitle_style">Chime</div>
           </div>
         </div>
 
@@ -120,9 +120,9 @@
         <div class="list-8">
           <div class="listboarder">
             <div class="album_style_bgm3"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <a href="bgm03.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Hinterlands</div>
+            <div class="artisttitle_style">Everen Maxwell</div>
           </div>
         </div>
 
@@ -130,9 +130,9 @@
         <div class="list-9">
           <div class="listboarder">
             <div class="album_style_bgm4"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <a href="bgm04.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Cyberblade</div>
+            <div class="artisttitle_style">Extra Terra, Max Brhon</div>
           </div>
         </div>
 
@@ -140,9 +140,9 @@
         <div class="list-6">
           <div class="listboarder">
             <div class="album_style_bgm5"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <a href="bgm05.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Obsession</div>
+            <div class="artisttitle_style">More Plastic</div>
           </div>
         </div>
 
@@ -150,9 +150,9 @@
         <div class="list-7">
           <div class="listboarder">
             <div class="album_style_bgm6"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <a href="bgm06.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">The Riot</div>
+            <div class="artisttitle_style">NIVIRO</div>
           </div>
         </div>
 
