--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -33,8 +33,8 @@
         <div class="listboarder">
           <div class="album_style1"></div>
           <a href="m01.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Dreamer (Rival Remix)</div>
-          <div class="artisttitle_style">Rival, Alan Walker</div>
+          <div class="songtitle_style">All I Need (feat. Karl Killing)</div>
+          <div class="artisttitle_style">Karl Killing, Ariadne</div>
         </div>
       </div>
 
