--- a/m01.html
+++ b/m01.html
@@ -23,7 +23,7 @@
               <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
 
-        <div class="text-wrapper-10">TITLE HERE</div>
+        <div class="text-wrapper-10">All I Need (feat. Karl Killing)</div>
 
         </div>
         <div class="overlap">
@@ -34,7 +34,7 @@
             <div class="rectangle-2"></div> <!-- Album -->
           </div>
           
-          <div class="text-wrapper-7">ARTIST HERE</div> <!-- Artist Title -->
+          <div class="text-wrapper-7">Karl Killing, Ariadne</div> <!-- Artist Title -->
         </div>
         <div class="overlap-group"> <!-- Download info -->
           <a href="resources/files/musiclib/m01.mp3" download> <!-- Download Button -->
