--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - About</title>
     <link rel="stylesheet" href="about.css" />
   </head>
   <body>
@@ -29,6 +31,10 @@
           <br><br>
           <b>Bello, Crisstone V.</b><br>
           Resources file manager, Back-end code development
+          <br><br>
+          <b>Powered by HowToMakeLumpia.com and CommonSenseSyntax.com </b><br>
+          <b>WEBTEC - IT501P</b>
+
         </div>
       </div>
     </div>
